# cxx-benchmark-count-digits

./: CMakeLists.txt  README.rst
scripts/: .gitignore  benchmark.sh  graph.R
src/: bchop.cpp  benchmark.cpp  benchmark.hpp  bsearch.cpp  bsr.cpp  bth-bsr.cpp  bth-clz.cpp  cmp.cpp  naive.cpp  range_case.cpp  range_case2.cpp  reverse_cmp.cpp  test.cpp  unroll4.cpp
